# stage_simulator

./: .gitmodules  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/: .gitmodules
src/simple_controller/: CMakeLists.txt  package.xml
src/simple_controller/src/: controller.py  utils.py
src/stage_nav/: CMakeLists.txt  package.xml
src/stage_nav/launch/: controller.launch  global_planner.launch  localize.launch  move_base.launch  stage_pr2.launch
src/stage_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml
src/stage_nav/scripts/: data.txt  get_obstcales.py  orca_vel.py  plot_velocity.py
src/stage_nav/src/: test_controller.py
src/stage_ros/launch/: stage_sim.launch
src/stage_ros/worlds/: laas.world  laas_simplified.world  mall.world  mall_simplified.world  maze.world  maze_simplified.world  open.world  open_simplified.world
